Updated OpenAPI Schema
